# kernel_crypt

./: .gitignore  CMakeLists.txt  README.md  install.sh  mod_template.c
src/: Makefile  kernel_crypt.c  kernel_crypt.h
src/aes/: aes.c  aes.h
src/random/: rand.c  rand.h
src/sha/: sha.c  sha.h
src/utils/: b64.c  b64.h  hex.c  hex.h  types.h  vrg.h
